--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ html {
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+    unicode-range: U+000-5FF;
 }
 
 body {
@@ -423,14 +424,14 @@ nav {
 }
 
 .hero-content h2 {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     margin-bottom: 0.2rem;
     margin-top: 0;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     font-family: var(--heading-font);
-    font-weight: 500;
-    word-spacing: -0.1em;
-    line-height: 1.1;
+    font-weight: 400;
+    word-spacing: -0.05em;
+    line-height: 1.2;
 }
 
 .hero-content p {
