--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,9 @@ html {
     font-style: normal;
     font-display: swap;
     unicode-range: U+000-5FF;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
+    text-rendering: optimizeLegibility;
 }
 
 body {
@@ -415,23 +418,36 @@ nav {
     color: white;
     margin-top: 0;
     padding-top: 80px;
+    will-change: transform;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    perspective: 1000;
+    -webkit-perspective: 1000;
 }
 
 .hero-content {
     max-width: 800px;
     text-align: left;
     margin-left: 0;
+    will-change: transform;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .hero-content h2 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     margin-bottom: 0.2rem;
     margin-top: 0;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     font-family: var(--heading-font);
     font-weight: 400;
     word-spacing: -0.05em;
     line-height: 1.2;
+    will-change: transform;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    contain: content;
 }
 
 .hero-content p {
